spacing issue

--- a/src/assets/scss/layout/_banner.scss
+++ b/src/assets/scss/layout/_banner.scss
@@ -86,7 +86,7 @@
     .content {
       @include vendor('display', 'flex');
       @include vendor('align-items', 'flex-end');
-      margin: 0 0 4.5rem 0;
+      // margin: 0 0 4.5rem 0;
 
       > * {
         margin-left: 1.5em;
